--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,18 +1,31 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-black-1">
     <div class="container d-flex pt-3 pb-4">
-        <a class="navbar-brand">ISDb</a>
+        <a class="navbar-brand" routerLink="/">ISDb</a>
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <form class="d-flex input-group w-auto mt-3 ms-auto mt-md-0 mb-md-0">
-                <input type="search" class="form-control" placeholder="Search something..." aria-label="Search" />
+            <div class="flex-grow-1 d-flex flex-column position-relative ms-0 ms-md-5">
+                <!--d-flex input-group w-auto mt-3 ms-auto mt-md-0 mb-md-0
+                    <input type="search" class="form-control" placeholder="Search something..." aria-label="Search" />
                 <button class="btn btn-outline-primary" type="button" data-mdb-ripple-color="dark">
-                    <i class="fa fa-search" aria-hidden="true"></i> </button>
-            </form>
-            <div class="form-inline nav-item ms-md-3 ">
-                <button type="button" class="btn btn-primary btn-theme ripple"> Login / Sign up </button>
+                    <i class="fa fa-search" aria-hidden="true"></i> </button>-->
+                <app-search (search)="handleSearch($event)" class="mt-3 mb-3 mt-md-0 mb-md-0"></app-search>
+                <div class="position-absolute d-flex flex-column w-100 custom-search rounded">
+                    <a class="pt-3 pb-3 ps-5 m-0 text-white text-decoration-none bg-dark"
+                        *ngFor="let serie of listaSeries | search:filter_value"
+                        routerLink="/serie/{{serie ?.idSerie}}">{{serie.titulo}}</a>
+                </div>
+            </div>
+
+            <div class="form-inline nav-item ms-md-3 d-flex" *ngIf="!currentUser">
+                <button type="button" class="btn btn-primary btn-theme ripple me-3" routerLink="/login"> Login </button>
+                <button type="button" class="btn btn-primary btn-theme ripple" routerLink="/register"> Sign up </button>
+            </div>
+            <div class="form-inline nav-item ms-md-3 d-flex" *ngIf="currentUser">
+                <button type="button" class="btn btn-primary btn-theme ripple me-3" routerLink="/management" *ngIf="isAdmin"> Management </button>
+                <button type="button" class="btn btn-primary btn-theme ripple" (click)="logout()"> Logout </button>
             </div>
         </div>
     </div>
