--- a/src/app/components/list-serie/list-serie.component.html
+++ b/src/app/components/list-serie/list-serie.component.html
@@ -11,7 +11,7 @@
         <div class="custom rounded" *ngFor="let serie of listaSeries">
             <a class="card hover-shadow text-white text-decoration-none bg-dark mb-3" routerLink="/serie/{{serie ?.idSerie}}">
                 <div class="img">
-                    <img class="card-img img-fluid" [src]="serie ?.poster" alt="Card image cap">
+                    <img appBrokenImg class="card-img img-fluid"  [src]="serie ?.poster" alt="Card image cap">
                 </div>
                 <div class="card-body bg-dark">
                     <div class="card-title">{{serie ?.titulo}} ({{serie ?.year}})</div>
