--- a/src/app/components/serie/serie.component.html
+++ b/src/app/components/serie/serie.component.html
@@ -1,23 +1,23 @@
-<app-header></app-header>
+<app-header ></app-header>
 <main class="bg-black">
     <div class="container p-3">
         <div class="mb-3 d-md-flex">
-            <div class="me-3 mb-sm-3 mb-md-0 text-center">
+            <div class="me-3 mb-sm-3 mb-md-0 text-center container-img">
                 <picture>
-                    <img [src]="respuesta ?.poster" alt="Poster {{respuesta?.titulo}}"
+                    <img appBrokenImg [src]="respuesta ?.poster" alt="Poster {{respuesta?.titulo}}"
                         class="img-fluid img-thumbnail rounded">
                 </picture>
             </div>
-            <div class="d-flex flex-column">
+            <div class="d-flex flex-column w-100">
                 <div class="mb-3 ">
                     <h1 class="text-warning mb-0">{{respuesta ?.titulo | titlecase}} ({{respuesta ?.year}})</h1>
                 </div>
-                <div class="mb-2 justify-content-evenly d-flex ">
+                <div class="mb-2 d-flex ">
                     <div class="badge bg-secondary me-2" *ngFor="let item of respuesta ?.generos">{{item ?.nombre}}
                     </div>
                 </div>
                 <p class="text-justify">{{respuesta ?.sinopsis}}</p>
-                <button class="btn btn-danger mt-auto">Trailer</button>
+                <app-modal-video [urlVideo]="respuesta.trailer"></app-modal-video>
             </div>
         </div>
         <div id="accordion">
@@ -62,10 +62,10 @@
                     <div class="card-body card-columns">
                         <div class="custom mb-3 border-1 rounded border-dark" *ngFor="let item of listActor">
                             <div class="img">
-                                <img class="card-img img-fluid" [src]="item ?.foto" alt="Card image cap">
+                                <img appBrokenImg class="card-img img-fluid" [src]="item ?.foto" alt="Card image cap">
                             </div>
                             <div class="card-body bg-black">
-                                <div class="card-title">{{item ?.name}})</div>
+                                <div class="card-title">{{item ?.name}}</div>
                             </div>
                         </div>
                     </div>
