--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -20,12 +20,12 @@
             </div>
 
             <div class="form-inline nav-item ms-md-3 d-flex" *ngIf="!currentUser">
-                <button type="button" class="btn btn-primary btn-theme ripple me-3" routerLink="/login"> Login </button>
-                <button type="button" class="btn btn-primary btn-theme ripple" routerLink="/register"> Sign up </button>
+                <button type="button" class="btn btn-warning btn-theme ripple me-3" routerLink="/login"> Login </button>
+                <button type="button" class="btn btn-warning btn-theme ripple" routerLink="/register"> Sign up </button>
             </div>
             <div class="form-inline nav-item ms-md-3 d-flex" *ngIf="currentUser">
-                <button type="button" class="btn btn-primary btn-theme ripple me-3" routerLink="/management" *ngIf="isAdmin"> Management </button>
-                <button type="button" class="btn btn-primary btn-theme ripple" (click)="logout()"> Logout </button>
+                <button type="button" class="btn btn-warning btn-theme ripple me-3" routerLink="/management" *ngIf="isAdmin"> Management </button>
+                <button type="button" class="btn btn-warning btn-theme ripple" (click)="logout()"> Logout </button>
             </div>
         </div>
     </div>
