--- a/src/app/components/tables/table-usuario/table-usuario.component.html
+++ b/src/app/components/tables/table-usuario/table-usuario.component.html
@@ -1,66 +1,45 @@
-<!--<table class="table table-striped">
-    <thead>
-        <tr>
-            <th scope="col">#</th>
-            <th scope="col">Titulo</th>
-            <th scope="col">Poster</th>
-            <th scope="col">Year</th>
-            <th scope="col">Sinopsis</th>
-            <th scope="col">Trailer</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let country of countries; index as i">
-            <th scope="row">{{ i + 1 }}</th>
-            <td>
-                <img [src]="'https://upload.wikimedia.org/wikipedia/commons/' + country.flag" class="mr-2"
-                    style="width: 20px">
-                {{ country.name }}
-            </td>
-            <td>{{ country.area | number }}</td>
-            <td>{{ country.population | number }}</td>
-            <td>Btn</td>
-        </tr>
-    </tbody>
-</table>-->
-<button class="btn btn-warning text-black mb-5 mt-5" (click)="addnewuser()">Add New User</button>
-<!--Datatable with User Details-->
-<div class="table-responsive">
-    <table class="table table-striped table-sm" id="datatableexample">
-        <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Username</th>
-                <th scope="col">Password</th>
-                <th scope="col">Email</th>
-                <th scope="col">Tipo</th>
-                <th scope="col">Genero</th>
-                <th scope="col">Pais</th>
-                <th scope="col">Nacimiento</th>
-                <th scope="col">Foto de Perfil</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let group of data">
-                <td scope="row">{{group.idUsuario}}</td>
-                <td>{{group.username}}</td>
-                <td>**************</td>
-                <td>{{group.email}}</td>
-                <td>{{group.tipo}}</td>
-                <td>{{group.genero}}</td>
-                <td>{{group.pais}}</td>
-                <td>{{group.nacimiento}}</td>
-                <td>{{group.fotoPerfil}}</td>
-                <td>
-                    <button class="btn btn-warning" (click)="edituser(group.id)"> <i class="fas fa-edit"></i> </button>
-                    <button class="btn btn-danger" (click)="deleteuser(group.id)"> <i class="fas fa-trash"></i>
-                    </button>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+<div class="p-4">
+    <button class="btn btn-warning text-black mb-3 mt-3" (click)="addnewuser()">Add New User</button>
+    <!--Datatable with User Details-->
+    <div class="table-responsive">
+        <table class="table table-striped table-sm" id="datatableexample">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Username</th>
+                    <th scope="col">Password</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Tipo</th>
+                    <th scope="col">Genero</th>
+                    <th scope="col">Pais</th>
+                    <th scope="col">Nacimiento</th>
+                    <th scope="col">Foto de Perfil</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let group of data">
+                    <td scope="row">{{group.idUsuario}}</td>
+                    <td>{{group.username}}</td>
+                    <td>**************</td>
+                    <td>{{group.email}}</td>
+                    <td>{{group.tipo}}</td>
+                    <td>{{group.genero}}</td>
+                    <td>{{group.pais}}</td>
+                    <td>{{group.nacimiento}}</td>
+                    <td>{{group.fotoPerfil}}</td>
+                    <td>
+                        <button class="btn btn-warning me-2" (click)="edituser(group.idUsuario)"> <i
+                                class="fa fa-pencil" aria-hidden="true"></i>
+                        </button>
+                        <button class="btn btn-danger" (click)="deleteuser(group.idUsuario)"> <i class="fa fa-trash"
+                                aria-hidden="true"></i>
+                        </button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
 <!--Add User Modal-->
 <div class="modal" id="addUser">
@@ -68,13 +47,15 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title align-center">Add User Details</h4>
+                <button type="button" class="btn btn-danger" (click)="addClose()">Close</button>
             </div>
             <div class="modal-body">
                 <form [formGroup]="addForm" (ngSubmit)="onSubmit()">
                     <div class="row">
                         <div class="form-group col-sm-6">
                             <label for="username">Username</label>
-                            <input type="text" formControlName="username" class="form-control" placeholder="example: pedro"
+                            <input type="text" formControlName="username" class="form-control"
+                                placeholder="example: pedro"
                                 [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
                             <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
                                 <div *ngIf="f.username.errors.required">Name is required</div>
@@ -82,7 +63,8 @@
                         </div>
                         <div class="form-group col-sm-6">
                             <label for="email">Email</label>
-                            <input type="text" formControlName="email" class="form-control" placeholder="example: email@gmail.com"
+                            <input type="text" formControlName="email" class="form-control"
+                                placeholder="example: email@gmail.com"
                                 [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
                             <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
                                 <div *ngIf="f.email.errors.required">Email is required</div>
@@ -100,16 +82,12 @@
                             </div>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary">Add</button>
+                    <button type="submit" class="btn btn-primary w-100 mt-3">Add User</button>
                 </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
 </div>
-
 
 <!--Edit User-->
 <div class="modal" id="editModal" *ngIf="showedituser">
@@ -117,38 +95,47 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title align-center">Edit : {{userdata.username}}</h4>
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <button type="button" class="btn btn-danger close" (click)="editClose()">Close</button>
             </div>
             <div class="modal-body">
                 <form [formGroup]="editForm" (ngSubmit)="onSubmitEdit()">
                     <div class="row">
-                        <div class="col-sm-6">
-                            <div class="form-group">
-                                <label>Username</label>
-                                <input type="text" formControlName="username" class="form-control"
-                                    [ngClass]="{ 'is-invalid': submitted && fe.username.errors }" />
-                                <div *ngIf="submitted && fe.username.errors" class="invalid-feedback">
-                                    <div *ngIf="fe.username.errors.required">Name is required</div>
-                                </div>
+                        <div class="form-group col-sm-6">
+                            <label>Username</label>
+                            <input type="text" formControlName="username" class="form-control"
+                                [ngClass]="{ 'is-invalid': submitted && fe.username.errors }" />
+                            <div *ngIf="submitted && fe.username.errors" class="invalid-feedback">
+                                <div *ngIf="fe.username.errors.required">Name is required</div>
                             </div>
                         </div>
-                        <div class="col-sm-6">
-                            <div class="form-group">
-                                <label>Email</label>
-                                <input type="text" formControlName="email" class="form-control"
-                                    [ngClass]="{ 'is-invalid': submitted && fe.email.errors }" />
-                                <div *ngIf="submitted && fe.email.errors" class="invalid-feedback">
-                                    <div *ngIf="fe.email.errors.required">Email is required</div>
-                                    <div *ngIf="fe.email.errors.email">Email must be a valid email address</div>
-                                </div>
+                        <div class="form-group col-sm-6">
+                            <label>Email</label>
+                            <input type="text" formControlName="email" class="form-control"
+                                [ngClass]="{ 'is-invalid': submitted && fe.email.errors }" />
+                            <div *ngIf="submitted && fe.email.errors" class="invalid-feedback">
+                                <div *ngIf="fe.email.errors.required">Email is required</div>
+                                <div *ngIf="fe.email.errors.email">Email must be a valid email address</div>
                             </div>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary">Update</button>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <label for="tipo">Tipo</label>
+                            <div class="form-group">
+                                <label for="tipo"></label>
+                                <select class="form-control" name="tipo" formControlName="tipo" class="form-control"
+                                    [ngClass]="{ 'is-invalid': submitted && fe.username.errors }">
+                                    <option selected>normal</option>
+                                    <option>admin</option>
+                                </select>
+                            </div>
+                            <div *ngIf="submitted && fe.tipo.errors" class="invalid-feedback">
+                                <div *ngIf="fe.tipo.errors.required">Name is required</div>
+                            </div>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary w-100 mt-3">Update</button>
                 </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
