--- a/src/app/components/nav-management/nav-management.component.html
+++ b/src/app/components/nav-management/nav-management.component.html
@@ -53,6 +53,6 @@
     </div>
 </nav>
 <main class="bg-dark">
-    <div [ngbNavOutlet]="nav" class=" container bg-white h-100"></div>
+    <div [ngbNavOutlet]="nav" class=" container bg-white min-vh-100"></div>
 </main>
 
