--- a/src/app/components/tables/table-review/table-review.component.html
+++ b/src/app/components/tables/table-review/table-review.component.html
@@ -1,16 +1,172 @@
-<table class="table table-striped">
-    <thead>
-        <tr>
-            <th scope="col">#</th>
-            <th scope="col">Titulo</th>
-            <th scope="col">Poster</th>
-            <th scope="col">Year</th>
-            <th scope="col">Sinopsis</th>
-            <th scope="col">Trailer</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        
-    </tbody>
-</table>
+<div class="p-4">
+    <button class="btn btn-warning text-black mb-3 mt-3" (click)="addnewreview()">Add New Review</button>
+    <!--Datatable with Review Details-->
+    <div class="table-responsive">
+        <table class="table table-striped table-sm text-center" id="datatable">
+            <thead class="bg-dark text-white">
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Titulo</th>
+                    <th scope="col">Descripcion</th>
+                    <th scope="col">Puntuacion</th>
+                    <th scope="col">Fecha</th>
+                    <th scope="col">ID Usuario</th>
+                    <th scope="col">ID Serie</th>
+                    <th scope="col">Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let group of data">
+                    <td scope="row">{{group.idReview}}</td>
+                    <td>{{group.titulo}}</td>
+                    <td>{{group.descripcion}}</td>
+                    <td>{{group.puntuacion}}</td>
+                    <td>{{group.fecha}}</td>
+                    <td>{{group.usuarioIdUsuario}}</td>
+                    <td>{{group.serieIdSerie}}</td>
+                    <td class="justify-content-around d-flex">
+                        <button class="btn btn-warning" (click)="editreview(group.idReview)"> <i class="fa fa-pencil"
+                                aria-hidden="true"></i>
+                        </button>
+                        <button class="btn btn-danger" (click)="deletereview(group.idReview)"> <i class="fa fa-trash"
+                                aria-hidden="true"></i>
+                        </button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+
+<form novalidate>
+    <div class="form-row">
+        <div class="form-group col-md-6">
+            <label for="yesno">Not searchable</label>
+            <ng-select appearance="outline" #agreeSelect labelForId="yesno" [searchable]="false" >
+                <ng-option [value]="true">Yes</ng-option>
+                <ng-option [value]="false">No</ng-option>
+            </ng-select>
+            <br/>
+        </div>
+        <div class="form-group col-md-6">
+            <label for="heroId">Basic select</label>
+            <ng-select appearance="outline" [searchable]="false" [clearable]="false" labelForId="heroId" >
+                <ng-option value="batman">8
+                </ng-option>
+                <ng-option value="spidey">8
+                </ng-option>
+                <ng-option value="thor">8
+                </ng-option>
+            </ng-select>
+        </div>
+    </div>
+</form>
+
+<!--Add Review Modal-->
+<div class="modal" id="addReview">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content ">
+            <div class="modal-header">
+                <h4 class="modal-title align-center">Add Review Details</h4>
+                <button type="button" class="btn btn-danger" (click)="addClose()">Close</button>
+            </div>
+            <div class="modal-body">
+                <form [formGroup]="addForm" (ngSubmit)="onSubmit()">
+                    <div class="row">
+                        <div class="form-group col-sm-6">
+                            <label for="titulo">Titulo</label>
+                            <input type="text" formControlName="titulo" class="form-control"
+                                placeholder="example: A Masterpiece!"
+                                [ngClass]="{ 'is-invalid': submitted && f.titulo.errors }" />
+                            <div *ngIf="submitted && f.titulo.errors" class="invalid-feedback">
+                                <div *ngIf="f.titulo.errors.required">Titulo is required</div>
+                            </div>
+                        </div>
+                        <div class="form-group col-sm-6">
+                            <label for="descripcion">Descripcion</label>
+                            <input type="text" formControlName="descripcion" class="form-control"
+                                placeholder="example: This is incredible"
+                                [ngClass]="{ 'is-invalid': submitted && f.descripcion.errors }" />
+                            <div *ngIf="submitted && f.descripcion.errors" class="invalid-feedback">
+                                <div *ngIf="f.descripcion.errors.required">Descripcion is required</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="form-group col-sm-4">
+                            <label for="puntuacion">Puntuacion</label>
+                            <select class="form-control selectpicker show-menu-arrow" formControlName="puntuacion"
+                                [ngClass]="{ 'is-invalid': submitted && f.puntuacion.errors }">
+                                <option></option>
+                                <option>1</option>
+                                <option>2</option>
+                                <option>3</option>
+                                <option>4</option>
+                                <option>5</option>
+                                <option>6</option>
+                                <option>7</option>
+                                <option>8</option>
+                                <option>9</option>
+                                <option>10</option>
+                            </select>
+                            <div *ngIf="submitted && f.puntuacion.errors" class="invalid-feedback">
+                                <div *ngIf="f.puntuacion.errors.required">Puntuacion is required</div>
+                            </div>
+                        </div>
+                        <div class="form-group col-sm-4">
+                            <label for="idUsuario">ID Usuario</label>
+                            <select class="form-control selectpiker" formControlName="idUsuario"
+                                [ngClass]="{ 'is-invalid': submitted && f.idUsuario.errors }" data-size="5">
+                                <option></option>
+                                <option *ngFor="let user of usuarios" [value]="user.idUsuario">{{user.idUsuario}}
+                                </option>
+                            </select>
+                            <div *ngIf="submitted && f.idUsuario.errors" class="invalid-feedback">
+                                <div *ngIf="f.idUsuario.errors.required">ID Usuario is required</div>
+                            </div>
+                        </div>
+                        <div class="form-group col-sm-4">
+                            <label for="idSerie">ID Serie</label>
+                            <select class="form-control" formControlName="idSerie"
+                                [ngClass]="{ 'is-invalid': submitted && f.idSerie.errors }" size="2">
+                                <option></option>
+                                <option *ngFor="let serie of series">{{serie.idSerie}}</option>
+                            </select>
+                            <div *ngIf="submitted && f.idSerie.errors" class="invalid-feedback">
+                                <div *ngIf="f.idSerie.errors.required">ID Serie is required</div>
+                            </div>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary w-100 mt-3">Add Role</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--Edit Role-->
+<div class="modal" id="editModal" *ngIf="showeditreview">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title align-center">Edit : {{reviewdata.review}}</h4>
+                <button type="button" class="btn btn-danger close" (click)="editClose()">Close</button>
+            </div>
+            <div class="modal-body">
+                <form [formGroup]="editForm" (ngSubmit)="onSubmitEdit()">
+                    <div class="row">
+                        <div class="form-group col-sm-6">
+                            <label>Nombre</label>
+                            <input type="text" formControlName="nombre" class="form-control"
+                                [ngClass]="{ 'is-invalid': submitted && fe.nombre.errors }" />
+                            <div *ngIf="submitted && fe.nombre.errors" class="invalid-feedback">
+                                <div *ngIf="fe.nombre.errors.required">Nombre is required</div>
+                            </div>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary w-100 mt-3">Update</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
