--- a/src/app/components/tables/table-usuario/table-usuario.component.html
+++ b/src/app/components/tables/table-usuario/table-usuario.component.html
@@ -2,7 +2,7 @@
     <button class="btn btn-warning text-black mb-3 mt-3" (click)="addnewuser()">Add New User</button>
     <!--Datatable with User Details-->
     <div class="table-responsive">
-        <table class="table table-striped table-sm text-center" id="datatableexample">
+        <table class="table table-striped table-sm text-center" id="datatable">
             <thead class="bg-dark text-white">
                 <tr>
                     <th scope="col">#</th>
