--- a/src/app/components/nav-management/nav-management.component.html
+++ b/src/app/components/nav-management/nav-management.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-black-1">
+<nav class="navbar navbar-expand-xl navbar-dark bg-black-1">
     <div class="container d-flex pt-2 pb-2">
         <a class="navbar-brand" routerLink="/">ISDb</a>
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -6,7 +6,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <div class="flex-grow-1 d-flex position-relative ms-0 ms-md-5 mt-3 mt-md-0">
+            <div class="flex-grow-1 d-flex position-relative ms-0 ms-xl-5 mt-3 mt-xl-0">
                 <div ngbNav #nav="ngbNav" [(activeId)]="active" class="nav-tabs w-100">
                     <div [ngbNavItem]="1">
                         <a ngbNavLink>Usuario</a>
@@ -50,13 +50,13 @@
                             <app-table-serie-genero></app-table-serie-genero>
                         </ng-template>
                     </div>
-                    <div [ngbNavItem]="8">
-                        <a ngbNavLink>Serie-Reparto</a>
+                    <div [ngbNavItem]="8" [disabled]="true">
+                        <a ngbNavLink >Serie-Reparto</a>
                         <ng-template ngbNavContent>
                             <app-table-serie-reparto></app-table-serie-reparto>
                         </ng-template>
                     </div>
-                    <div [ngbNavItem]="9">
+                    <div [ngbNavItem]="9" [disabled]="true">
                         <a ngbNavLink>Reparto-Role</a>
                         <ng-template ngbNavContent>
                             <app-table-reparto-role></app-table-reparto-role>
@@ -64,7 +64,7 @@
                     </div>
                 </div>
             </div>
-            <div class="form-inline nav-item ms-md-3 d-flex mt-3 mt-md-0" *ngIf="currentUser">
+            <div class="form-inline nav-item ms-xl-3 d-flex mt-3 mt-xl-0" *ngIf="currentUser">
                 <button type="button" class="btn btn-warning  btn-theme ripple w-100" (click)="logout()"> Logout
                 </button>
             </div>
@@ -72,5 +72,5 @@
     </div>
 </nav>
 <main class="bg-dark">
-    <div [ngbNavOutlet]="nav" class=" container bg-white min-vh-100"></div>
+    <div [ngbNavOutlet]="nav" class="container bg-white min-vh-100"></div>
 </main>
