--- a/src/app/components/serie/serie.component.css
+++ b/src/app/components/serie/serie.component.css
@@ -37,6 +37,28 @@ main {
     page-break-inside: avoid;
 }
 
+.collapse{
+    max-height: 800px;
+    overflow-y: auto;
+}
+/****************************************************/
+/* Css from https://codepen.io/devstreak/pen/dMYgeO */
+.collapse::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #F5F5F5;
+}
+
+.collapse::-webkit-scrollbar {
+    width: 10px;
+    background-color: #F5F5F5;
+}
+
+.collapse::-webkit-scrollbar-thumb {
+    background-color: #F90;
+    background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent)
+}
+/****************************************************/
+
 @media (min-width:356px) {
     .card-columns {
         column-count: 1;
