--- a/src/app/components/tables/table-reparto-role/table-reparto-role.component.html
+++ b/src/app/components/tables/table-reparto-role/table-reparto-role.component.html
@@ -1,1 +1,103 @@
-<p>table-reparto-role works!</p>
+<div class="p-4">
+    <button class="btn btn-warning text-black mb-3 mt-3" (click)="addnew()">Add New Row</button>
+    <!--Datatable with Serie-Reparto Details-->
+    <div class="table-responsive">
+        <table class="table table-striped table-sm text-center" id="datatable">
+            <thead class="bg-dark text-white">
+                <tr>
+                    <th scope="col">ID Reparto</th>
+                    <th scope="col">ID Role</th>
+                    <th scope="col">Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let group of data">
+                    <td scope="row">{{group.repartoIdReparto}}</td>
+                    <td scope="row">{{group.roleIdRole}}</td>
+                    <td class="justify-content-around d-flex">
+                        <button class="btn btn-warning" (click)="edit(group.repartoIdReparto, group.roleIdRole)"> <i class="fa fa-pencil"
+                                aria-hidden="true"></i>
+                        </button>
+                        <button class="btn btn-danger" (click)="delete(group.repartoIdReparto, group.roleIdRole)"> <i class="fa fa-trash"
+                                aria-hidden="true"></i>
+                        </button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+
+<!--Add Modal-->
+<div class="modal" id="addModal">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content ">
+            <div class="modal-header">
+                <h4 class="modal-title align-center">Add Reparto-Role Details</h4>
+                <button type="button" class="btn btn-danger" (click)="addClose()">Close</button>
+            </div>
+            <div class="modal-body">
+                <form [formGroup]="addForm" (ngSubmit)="onSubmit()">
+                    <div class="row">
+                        <div class="form-group col-sm-6">
+                            <label for="idReparto">ID Reparto</label>
+                            <app-custom-dropdown formControlName="idReparto" [options]="optRepartos"
+                                [ngClass]="{ 'is-invalid': submitted && f.idReparto.errors }"></app-custom-dropdown>
+                            <div *ngIf="submitted && f.idReparto.errors" class="invalid-feedback">
+                                <div *ngIf="f.idReparto.errors.required || f.idReparto.errors.pattern">ID Reparto is
+                                    required</div>
+                            </div>
+                        </div>
+                        <div class="form-group col-sm-6">
+                            <label for="idRole">ID Role</label>
+                            <app-custom-dropdown formControlName="idRole" [options]="optRoles"
+                                [ngClass]="{ 'is-invalid': submitted && f.idRole.errors }"></app-custom-dropdown>
+                            <div *ngIf="submitted && f.idRole.errors" class="invalid-feedback">
+                                <div *ngIf="f.idRole.errors.required || f.idRole.errors.pattern">ID Role is
+                                    required</div>
+                            </div>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary w-100 mt-3">Add Row</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--Edit-->
+<div class="modal" id="editModal" *ngIf="showedit">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title align-center">Edit : Serie - {{seriegenerodata.serieID}} | Reparto - {{seriegenerodata.repartoID}}</h4>
+                <button type="button" class="btn btn-danger close" (click)="editClose()">Close</button>
+            </div>
+            <div class="modal-body">
+                <form [formGroup]="editForm" (ngSubmit)="onSubmitEdit()">
+                    <div class="row">
+                        <div class="form-group col-sm-6">
+                            <label for="idReparto">ID Reparto</label>
+                            <app-custom-dropdown formControlName="idReparto" [options]="optRepartos"
+                                [ngClass]="{ 'is-invalid': submitted && fe.idReparto.errors }"></app-custom-dropdown>
+                            <div *ngIf="submitted && fe.idReparto.errors" class="invalid-feedback">
+                                <div *ngIf="fe.idReparto.errors.required || fe.idReparto.errors.pattern">ID Reparto is
+                                    required</div>
+                            </div>
+                        </div>
+                        <div class="form-group col-sm-6">
+                            <label for="idRole">ID Role</label>
+                            <app-custom-dropdown formControlName="idRole" [options]="optRoles"
+                                [ngClass]="{ 'is-invalid': submitted && fe.idRole.errors }"></app-custom-dropdown>
+                            <div *ngIf="submitted && fe.idRole.errors" class="invalid-feedback">
+                                <div *ngIf="fe.idRole.errors.required || fe.idRole.errors.pattern">ID Role is
+                                    required</div>
+                            </div>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary w-100 mt-3">Update</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
