--- a/src/app/components/tables/table-reparto/table-reparto.component.html
+++ b/src/app/components/tables/table-reparto/table-reparto.component.html
@@ -1,14 +1,118 @@
-<table class="table table-striped">
-    <thead>
-        <tr>
-            <th scope="col">#</th>
-            <th scope="col">Name</th>
-            <th scope="col">Foto</th>
-            <th scope="col">Role</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        
-    </tbody>
-</table>
+<div class="p-4">
+    <div class="d-flex align-items-center">
+        <button class="btn btn-warning text-black me-auto px-2 px-md-3" (click)="addnew()">Add Row</button>
+        <form [formGroup]="serieForm" (ngSubmit)="onSearchSerie()" class="mb-3 mt-3 ">
+            <div class="d-flex align-items-center">
+                <label for="idSerie">ID Serie:</label>
+                <div class="form-group ms-0 ms-sm-3">
+                    <input type="text" formControlName="idSerie" class="form-control" placeholder="ID Serie"
+                        [ngClass]="{ 'is-invalid': submittedSerie && s.idSerie.errors }" />
+                    <div *ngIf="submittedSerie && s.idSerie.errors" class="invalid-feedback">
+                        <div *ngIf="s.idSerie.errors.required">ID Serie is required</div>
+                        <div *ngIf="s.idSerie.errors.pattern">ID Serie must be a number</div>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-primary w-auto">Search</button>
+            </div>
+        </form>
+    </div>
+    <!--Datatable with Genero Details-->
+    <div class="table-responsive">
+        <table class="table table-striped table-sm text-center" id="datatable">
+            <thead class="bg-dark text-white">
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Nombre</th>
+                    <th scope="col">Foto</th>
+                    <th scope="col">Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let group of data">
+                    <td scope="row">{{group.idReparto}}</td>
+                    <td>{{group.name}}</td>
+                    <td>{{group.foto}}</td>
+                    <td class="justify-content-around d-flex">
+                        <button class="btn btn-warning" (click)="edit(group.idReparto)"> <i class="fa fa-pencil"
+                                aria-hidden="true"></i>
+                        </button>
+                        <button class="btn btn-danger" (click)="deletereparto(group.idReparto)"> <i class="fa fa-trash"
+                                aria-hidden="true"></i>
+                        </button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+
+<!--Add User Modal-->
+<div class="modal" id="addModal">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content ">
+            <div class="modal-header">
+                <h4 class="modal-title align-center">Add Reparto Details</h4>
+                <button type="button" class="btn btn-danger" (click)="addClose()">Close</button>
+            </div>
+            <div class="modal-body">
+                <form [formGroup]="addForm" (ngSubmit)="onSubmit()">
+                    <div class="row">
+                        <div class="form-group col-sm-6">
+                            <label for="nombre">Nombre</label>
+                            <input type="text" formControlName="nombre" class="form-control"
+                                placeholder="example: John"
+                                [ngClass]="{ 'is-invalid': submitted && f.nombre.errors }" />
+                            <div *ngIf="submitted && f.nombre.errors" class="invalid-feedback">
+                                <div *ngIf="f.nombre.errors.required">Nombre is required</div>
+                            </div>
+                        </div>
+                        <div class="form-group col-sm-6">
+                            <label for="foto">Foto</label>
+                            <input type="text" formControlName="foto" class="form-control" placeholder="example: https://"
+                                [ngClass]="{ 'is-invalid': submitted && f.foto.errors }" />
+                            <div *ngIf="submitted && f.foto.errors" class="invalid-feedback">
+                                <div *ngIf="f.foto.errors.required">Foto is required</div>
+                            </div>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary w-100 mt-3">Add Reparto</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--Edit User-->
+<div class="modal" id="editModal" *ngIf="showedit">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title align-center">Edit : {{repartodata.name}}</h4>
+                <button type="button" class="btn btn-danger close" (click)="editClose()">Close</button>
+            </div>
+            <div class="modal-body">
+                <form [formGroup]="editForm" (ngSubmit)="onSubmitEdit()">
+                    <div class="row">
+                        <div class="form-group col-sm-6">
+                            <label>Nombre</label>
+                            <input type="text" formControlName="nombre" class="form-control"
+                                [ngClass]="{ 'is-invalid': submitted && fe.nombre.errors }" />
+                            <div *ngIf="submitted && fe.nombre.errors" class="invalid-feedback">
+                                <div *ngIf="fe.nombre.errors.required">Nombre is required</div>
+                            </div>
+                        </div>
+                        <div class="form-group col-sm-6">
+                            <label>Foto</label>
+                            <input type="text" formControlName="foto" class="form-control"
+                                [ngClass]="{ 'is-invalid': submitted && fe.foto.errors }" />
+                            <div *ngIf="submitted && fe.foto.errors" class="invalid-feedback">
+                                <div *ngIf="fe.foto.errors.required">Foto is required</div>
+                            </div>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary w-100 mt-3">Update</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
